# Django-database-reinstaller

./: .gitignore  .style.yapf  README.md  install.py  pyproject.toml  requirements.txt  setup.cfg
django_reinstallation_app/: app_tool.py  db_tool.py  installer_tool.py  migration_tool.py  print_tool.py
django_reinstallation_app/services/: singletone.py
installation_app/: app_tool.py  db_tool.py  file_tool.py  installer_tool.py  migration_tool.py
installation_app/management/commands/: install.py
services/: db_tool.py  file_tool.py  print_service.py
