[metadata]
name = django_reinstallation_app
version = 0.1
description = App to reinstall postgres db and app migrations.
long_description = file: README.md
url = https://github.com/Rwwwrl/database_installer
author = Alexey Sosov
author_email = lesh.solowiew@yandex.ru
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10.1

[options]
include_package_data = true
packages = find:
python_requires = >=3.10.1
install_requires =
    Django >= 4.0.1
    psycopg2 >= 2.9.3