[metadata]
name = django_reinstallation_app
version = 0.3
description = App to reinstall postgres db and app migrations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rwwwrl/database_installer
author = Alexey Sosov
author_email = lesh.solowiew@yandex.ru
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[options]
include_package_data = true
packages = find:
python_requires = >=3.10.1
install_requires =
    Django >= 4.0.1
    psycopg2 >= 2.9.3

[flake8]
max-line-length = 120
max-complexity = 8
indent-size = 4
ignore = E131, E126, E123, E122
